@@ -1,0 +1,66 @@
+package addsynth.core.util.java.list;
+
+import java.util.Comparator;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.tags.TagKey;
+import net.minecraftforge.registries.tags.ITag;
+
+public final class Sorters {
+
+  public static final Comparator<ResourceLocation> NameComparer = (final ResourceLocation o1, final ResourceLocation o2) -> {
+    return o1.compareNamespaced(o2);
+  };
+
+  public static final Comparator<ResourceLocation> NameComparerMinecraftFirst = (final ResourceLocation o1, final ResourceLocation o2) -> {
+    return compareMinecraftAndForge(o1, o2);
+  };
+
+  public static final Comparator<TagKey<?>> KeyComparer = (final TagKey<?> k1, final TagKey<?> k2) -> {
+    final ResourceLocation o1 = k1.location();
+    final ResourceLocation o2 = k2.location();
+    return o1.compareNamespaced(o2);
+  };
+
+  public static final Comparator<TagKey<?>> KeyComparerMinecraftFirst = (final TagKey<?> k1, final TagKey<?> k2) -> {
+    final ResourceLocation o1 = k1.location();
+    final ResourceLocation o2 = k2.location();
+    return compareMinecraftAndForge(o1, o2);
+  };
+
+  public static final Comparator<ITag<?>> TagComparer = (final ITag<?> tag1, final ITag<?> tag2) -> {
+    final ResourceLocation o1 = tag1.getKey().location();
+    final ResourceLocation o2 = tag2.getKey().location();
+    return o1.compareNamespaced(o2);
+  };
+
+  public static final Comparator<ITag<?>> TagComparerMinecraftFirst = (final ITag<?> tag1, final ITag<?> tag2 ) -> {
+    final ResourceLocation o1 = tag1.getKey().location();
+    final ResourceLocation o2 = tag2.getKey().location();
+    return compareMinecraftAndForge(o1, o2);
+  };
+
+  public static final int compareMinecraftAndForge(final ResourceLocation o1, final ResourceLocation o2){
+    final String namespace1 = o1.getNamespace();
+    final String namespace2 = o2.getNamespace();
+    if(namespace1.equals("minecraft")){
+      if(namespace2.equals("minecraft")){
+        return o1.getPath().compareTo(o2.getPath());
+      }
+      return -1;
+    }
+    if(namespace2.equals("minecraft")){
+      return 1;
+    }
+    if(namespace1.equals("forge")){
+      if(namespace2.equals("forge")){
+        return o1.getPath().compareTo(o2.getPath());
+      }
+      return -1;
+    }
+    if(namespace2.equals("forge")){
+      return 1;
+    }
+    return o1.compareNamespaced(o2);
+  }
+
+}
