@@ -1,10 +1,14 @@
 v1.5.2 - TBD
+CHANGES:
+  If you enabled the Dump Tags config option in the ADDSynthCore config, the tags are
+    now sorted alphabetically, but also lists vanilla minecraft tags first, followed
+    by forge tags, then tags from other mods.
 REMOVED:
   Amethyst.
-   - We use vanilla Amethyst now.
+   - We use vanilla Amethyst Shards now.
    - We still spawn Amethyst Ore, and it drops a vanilla Amethyst Shard when mined.
    - If your world previously contained ADDSynth Material Amethyst or Amethyst Blocks,
-      those will be replaced with vanilla Amethyst Shards and Amethyst Blocks.
+      those will automatically be replaced with vanilla Amethyst Shards and Amethyst Blocks.
 
 
 
